--- a/infra/k8s/posts-depl.yaml
+++ b/infra/k8s/posts-depl.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: posts
-          image: aeonincode/posts:0.0.1
+          image: aeonincode/posts
